wiki instructor notes

--- a/cookbook/meal-prep/wiki-page-1/page0.html
+++ b/cookbook/meal-prep/wiki-page-1/page0.html
@@ -16,6 +16,37 @@
                 see Crown Shyness (album).
             </i>
         </p>
+        <!--
+            Note that we don't expect you or the students to
+            type all this out; feel free to copy/paste directly 
+            from the wiki page into your paragraph element.
+
+            Just be sure to manually break up the pasted content
+            across multiple lines with proper indentation!
+
+            You will, however, have to add the appropriate
+            styling elements around the text content, which will
+            probably require you to further adjust how the 
+            content is broken up across lines.
+
+            Also note, the one exception to the HTML element
+            indentation rules we've previously shared is with 
+            "inline" text styling elements.
+
+            <b>, <i>, and <sup> in the following code are 
+            not required to be on their own lines, because
+            they themselves are inline elements (and it would
+            likely make the code harder to read if we had them
+            all on separate lines, which is the opposite of
+            the goals of clean coding).
+
+            Be sure to tell the students that, but also call
+            out that the Wiki assignments are probably the
+            only exercises that they'll encounter this exception.
+
+            Most other assignments will follow the indentation
+            rules much more cleanly.
+        -->
         <p>
             <b>Crown shyness</b> (also 
             <i>canopy disengagement</i>,<sup>[1]</sup> 
