anchors demo updates

--- a/cookbook/meal-prep/anchors/page7.html
+++ b/cookbook/meal-prep/anchors/page7.html
@@ -40,7 +40,9 @@
             elements with their ids set up next.
 
             We're going to use headings for this purpose,
-            h2 elements in particular.
+            h2 elements in particular; however, you can use
+            create an internal link to ANY element as long
+            as you set things up correctly.
 
             (As an aside, it is good practice to only have one 
             single h1 element on the page; since we're going to
@@ -50,9 +52,12 @@
         <h2 id="section1">Welcome to Section 1!</h2>
         <!--
             We have our heading with an id attribute up above.
-            However, if all our sections are visible on the page,
-            our links won't actually do anything, since the page
-            won't be able to scroll.
+            That takes care of the 1st and 2nd requirements
+            to create an internal link.
+
+            However, if all our sections are completely 
+            visible on the page, our links won't actually 
+            do anything, since the page won't be able to scroll.
 
             So...we're going to do something very dirty code-wise...
 
