--- a/cookbook/meal-prep/anchors/page9.html
+++ b/cookbook/meal-prep/anchors/page9.html
@@ -63,6 +63,9 @@
             you should be able to click on the hyperlinks in our
             table of contents and jump down to the different 
             sections of our page.
+
+            Well done! Now you're ready for the next exercise,
+            which also happens to use internal links. :-)
         -->
         <h2 id="section1">Welcome to Section 1!</h2>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
