--- a/cookbook/meal-prep/anchors/page6.html
+++ b/cookbook/meal-prep/anchors/page6.html
@@ -24,28 +24,37 @@
         </p>
         <!--
             At this point, we have three examples of the 
-            first type of anchor, that navigates us off
-            of the page to another site.
+            first type of anchor, the kind that that navigates 
+            us off of the page to another site.
 
             Now let's find out how to navigate somewhere
             else on the same page.
 
             This approach is a little more complicated,
             because there are multiple pieces involved.
+
+            BUT, it's actually very similar to how we 
+            created Internal Links in WordPress, if you
+            remember that from the WordPress Wiki exercise.
+
+
             For this approach, we must have the following:
                 1. elements on the page we want to navigate to
                 2. id attributes on those elements
                 3. anchor elements with href attributes that
                    follow this template:
-                    - href="#id-value" where id-value is
+                    - href="#id-value", where id-value is
                       the attribute value of one of the 
                       elements we wanted to jump to.
 
             To illustrate this type of anchor, we're going 
-            to build a rather practical "table of contents".
+            to build a rather practical "table of contents"
+            (again, similar to what you've previously done
+            in WordPress).
+
             Of the three parts or pieces we need for them
             to succesfully navigate within the page, we'll
-            start with the third part first: the anchors.
+            start with the last part first: the anchors.
         -->
         <h6>TABLE OF CONTENTS</h6>
         <ul>
