potluck and span updates

--- a/cookbook/ingredients/spans.html
+++ b/cookbook/ingredients/spans.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <p>
-            <span>Span elements</span> are the most basic inline 
-            element in HTML.
+            <span>Span elements</span>
+            are the most basic inline element in HTML.
         </p>
         <p>
             As a reminder, inline elements are place "in line" with 
@@ -20,14 +20,17 @@
             on the same line.
         </p>
         <p>
-            Similar to div elements, <span>span elements</span> have 
-            no styling at all.
+            Similar to div elements, 
+            <span>span elements</span> 
+            have no styling at all.
         </p>
         <p>
-            The content inside a span element will be grouped 
-            inline in the code, but unless you use some kind of 
-            styling to distinguish it visually, you probably won't 
-            be able to tell on the page.
+            <span>The content inside a span element</span>
+            <span>will be grouped inline in the code,</span>
+            but unless you use some kind of styling to 
+            distinguish it visually, 
+            <span>you probably won't be able to tell</span> 
+            on the page.
         </p>
         <h4><span class="italics">Inline Style</span> Examples</h4>
         <p>
