--- a/cookbook/meal-prep/movie-showcase/page0.html
+++ b/cookbook/meal-prep/movie-showcase/page0.html
@@ -54,7 +54,7 @@
         <hr>
         <!--
             For each individual image showcase, we take advantage
-            of inline elements like <b>, <span>, and <i> to
+            of inline elements like <b> and <i> to
             keep content on the same line.
 
             To add extra horizontal space between elements in the
@@ -74,35 +74,35 @@
         <br>
         <br>
         <b>GENRE&nbsp;</b>
-        <span>Fantasy/Romance</span>
+        Fantasy/Romance
         &nbsp;&nbsp;
         <b>RUNTIME&nbsp;</b>
-        <span>2h 14min</span>
+        2h 14min
         &nbsp;&nbsp;
         <b>RATING&nbsp;</b>
-        <span>
-            <!--
-                Below are examples of how to load up icons
-                from the Font Awesome icon library.
-                
-                Again, remember that you can only use "free"
-                icons in this way; "pro" icons (or icon 
-                styles) will not load at all.
 
-                And yes, they are choosing to use the <i>
-                element as if "i" stood for "icon" instead
-                of "italics".  Not the best practice, but
-                a very common one across the internet.
+        <!--
+            Below are examples of how to load up icons
+            from the Font Awesome icon library.
+            
+            Again, remember that you can only use "free"
+            icons in this way; "pro" icons (or icon 
+            styles) will not load at all.
 
-                As long as no one puts any content inside 
-                of the element, it shouldn't really hurt
-                anything, despite not being used as intended.
-            -->
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star-half-stroke"></i>
-        </span>
+            And yes, they are choosing to use the <i>
+            element as if "i" stood for "icon" instead
+            of "italics".  Not the best practice, but
+            a very common one across the internet.
+
+            As long as no one puts any content inside 
+            of the element, it shouldn't really hurt
+            anything, despite not being used as intended.
+        -->
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star-half-stroke"></i>
+
         <h4>SYNOPSIS</h4>
         <p>
             Sophie (Emily Mortimer) has an uneventful life at 
@@ -127,18 +127,18 @@
         <br>
         <br>
         <b>GENRE&nbsp;</b>
-        <span>Action/Adventure/Romance</span>
+        Action/Adventure/Romance
         &nbsp;&nbsp;
         <b>RUNTIME&nbsp;</b>
-        <span>2h 10min</span>
+        2h 10min
         &nbsp;&nbsp;
         <b>RATING&nbsp;</b>
-        <span>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-        </span>
+
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-regular fa-star"></i>
+
         <h4>SYNOPSIS</h4>
         <p>
             The evil mummy Imhotep returns to wreak havoc as he 
