--- a/cookbook/meal-prep/playlist/page0.html
+++ b/cookbook/meal-prep/playlist/page0.html
@@ -61,7 +61,7 @@
         <br>
         <!--
             For each individual playlist item, we take advantage
-            of inline elements like <b>, <span>, and <i> to
+            of inline elements like <b> and <i> to
             keep content on the same line.
 
             To add extra horizontal space between elements in the
@@ -93,7 +93,7 @@
         &nbsp;
         <i>NieR Gestalt & Replicant Original Soundtrack</i>
         &nbsp;
-        <span>2:41</span>
+        2:41
         <br>
         <br>
         &nbsp;
@@ -107,7 +107,7 @@
         &nbsp;
         <i>Hymmnos Concert Side 炎</i>
         &nbsp;
-        <span>2:53</span>
+        2:53
         <br>
         <br>
         &nbsp;&nbsp;&nbsp;&nbsp;
@@ -118,7 +118,7 @@
         &nbsp;
         <i>Hymmnos Concert Side 澪</i>
         &nbsp;
-        <span>4:37</span>
+        4:37
         <br>
         <br>
         &nbsp;
@@ -132,7 +132,7 @@
         &nbsp;
         <i>NieR: Automata Original Soundtrack</i>
         &nbsp;
-        <span>5:09</span>
+        5:09
         <br>
         <br>
         &nbsp;
@@ -146,7 +146,7 @@
         &nbsp;
         <i>Ar nosurge Genometric Concert</i>
         &nbsp;
-        <span>5:09</span>
+        5:09
         <br>
     </body>
 </html>
