--- a/cookbook/meal-prep/recipe-book/page0.html
+++ b/cookbook/meal-prep/recipe-book/page0.html
@@ -29,7 +29,7 @@
         <hr>
         <!--
             For the recipe info section, we take advantage
-            of inline elements like <b>, <span>, and <i> to
+            of inline elements like <b> and <i> to
             keep content on the same line.
 
             To add extra horizontal space between elements in the
@@ -42,33 +42,33 @@
             break elements (<br>) .
         -->
         <i class="fa-regular fa-clock"></i>
-        <b>Total Time</b>&nbsp;
-        <span>30 min</span>
+        <b>Total Time&nbsp;</b>
+        30 min
         &nbsp;&nbsp;&nbsp;
         <!--
-                Below (and above) are examples of how to load 
-                up icons from the Font Awesome icon library.
-                
-                Again, remember that you can only use "free"
-                icons in this way; "pro" icons (or icon 
-                styles) will not load at all.
+            Below (and above) are examples of how to load 
+            up icons from the Font Awesome icon library.
+            
+            Again, remember that you can only use "free"
+            icons in this way; "pro" icons (or icon 
+            styles) will not load at all.
 
-                And yes, they are choosing to use the <i>
-                element as if "i" stood for "icon" instead
-                of "italics".  Not the best practice, but
-                a very common one across the internet.
+            And yes, they are choosing to use the <i>
+            element as if "i" stood for "icon" instead
+            of "italics".  Not the best practice, but
+            a very common one across the internet.
 
-                As long as no one puts any content inside 
-                of the element, it shouldn't really hurt
-                anything, despite not being used as intended.
-            -->
+            As long as no one puts any content inside 
+            of the element, it shouldn't really hurt
+            anything, despite not being used as intended.
+        -->
         <i class="fa-solid fa-utensils"></i>
-        <b>Makes</b>&nbsp;
-        <span>1 dozen</span>
+        <b>Makes&nbsp;</b>
+        1 dozen
         &nbsp;&nbsp;&nbsp;
         <i class="fa-solid fa-feather"></i>
-        <b>Author</b>&nbsp;
-        <span>Grammy Liz</span>
+        <b>Author&nbsp;</b>
+        Grammy Liz
         <hr>
         <!--
             Remember, <img> elements are inline elements,
