document flow updates

--- a/cookbook/meal-prep/colors-and-text/page1.html
+++ b/cookbook/meal-prep/colors-and-text/page1.html
@@ -44,14 +44,14 @@
         <!--
             (Ignore the file name in these demo files,
             just use style.css in your demo for the students.
-            These Meal Prep demos use separate files to
+            These demos use separate files to
             break up the different parts of the demos for you,
             so we need different file names for each.)
 
-            (Also ignore the 'data-meal-prep' attribute in
-            your demo for the students; this is just a
+            (Also ignore the 'data-meal-prep' attribute when
+            going through this demo; this is just a
             custom attribute to configure how the code
-            loads in the "Meal Prep" demo site)
+            loads in the Cookbook demo site)
         -->
     </head>
     <body>
