--- a/cookbook/meal-prep/divs-spans-and-flow/page1.html
+++ b/cookbook/meal-prep/divs-spans-and-flow/page1.html
@@ -15,7 +15,13 @@
             nobis distinctio asperiores?
         </p>
         <!--
-            Next add two span elements with short 
+            Let's add a new type of element called
+            a span (short for "Content Span").
+
+            Span elements are the most simple and 
+            basic kind of inline elements.
+
+            Add two span elements with some short 
             text inside of them.
         -->
         <span>This is a span</span>
@@ -34,11 +40,11 @@
             that isn't inside of it is forced to a 
             new line after it.
 
-            Spans, as inline elements, take up only
-            as much space as the content inside them
-            needs (you can kind of think of them like
-            cling-wrap or shrink-wrap); they can also
-            sit side-by-side with other inline elements.
+            Spans, as inline elements, take up only as 
+            much space as the content inside them needs 
+            (you can kind of think of them like cling-wrap 
+            or shrink-wrap); they can also sit side-by-side 
+            with other inline elements.
 
             Spans in particular are special, because
             they have almost no styling added to them
