--- a/cookbook/meal-prep/divs-spans-and-flow/page2.html
+++ b/cookbook/meal-prep/divs-spans-and-flow/page2.html
@@ -17,7 +17,7 @@
         <span>This is a span</span>
         <span>This is another span</span>
         <!--
-            Now let's add a new type of element called
+            Now let's add another new type of element called
             a div, short for a Content Division element.
 
             The div element is similar to a span, in that
