--- a/cookbook/meal-prep/divs-spans-and-flow/page4.html
+++ b/cookbook/meal-prep/divs-spans-and-flow/page4.html
@@ -17,7 +17,7 @@
         <!--
             Again, ignore the file name above, along with
             the 'data-meal-prep' attribute; those are just
-            for configuring the demo in the Meal Prep site.
+            for configuring the demo in the Cookbook site.
         -->
     </head>
     <body>
