--- a/cookbook/meal-prep/divs-spans-and-flow/page6.html
+++ b/cookbook/meal-prep/divs-spans-and-flow/page6.html
@@ -47,7 +47,7 @@
         </div>
         <!--
             We now have a second div at a width of
-            200px, directly underneat the first,
+            200px, directly underneath the first,
             almost forming an even longer column.
 
             Did that surprise anyone? It would not
