box model and combining selectors updates

--- a/cookbook/meal-prep/box-model/page1.html
+++ b/cookbook/meal-prep/box-model/page1.html
@@ -8,8 +8,8 @@
             Add your link element, to connect this HTML
             file to the new style.css file you just created.
 
-            Remind the class that they need to have both
-            the href attribute (pointing to their css file)
+            Remember that you need to have both
+            the href attribute (pointing to your css file)
             and the rel attribute (with the value 
             "stylesheet") to properly link the HTML and CSS.
         -->
@@ -17,7 +17,7 @@
         <!--
             Again, ignore the file name above, along with
             the 'data-meal-prep' attribute; those are just
-            for configuring the demo in the Meal Prep site.
+            for configuring the demo in the Cookbook site.
         -->
     </head>
     <body>
