--- a/cookbook/meal-prep/combining-selectors/page0.html
+++ b/cookbook/meal-prep/combining-selectors/page0.html
@@ -9,15 +9,17 @@
         <!--
             This demo requires a bit of setup.
             Add a div with an id of "navbar",
-            with three anchor elements inside it.
+            with three anchor elements inside it;
+            the last one should have a class of
+            "warning" on it.
 
             Then add two paragraphs with lorem
             ipsum text beneath that, and add
             two or three anchor elements inside.
 
             For the second paragraph, give it a
-            class of "warning".  Then you should
-            be set for now.
+            class of "warning" as well.  Then 
+            you should be set for now.
 
             You'll be adding more HTML later,
             but we'll jump to the CSS next.
@@ -25,7 +27,7 @@
         <div id="navbar">
             <a href="#">HOME</a>
             <a href="#">ABOUT</a>
-            <a href="#">CONTACT</a>
+            <a href="#" class="warning">CONTACT</a>
         </div>
         <p>
             Lorem ipsum dolor sit amet, consectetur 
