--- a/cookbook/meal-prep/combining-selectors/page1.html
+++ b/cookbook/meal-prep/combining-selectors/page1.html
@@ -15,14 +15,14 @@
             Also as usual, ignore the file name
             and the data-meal-prep attribute;
             that's just for configuring the demo
-            in the Meal Prep site.
+            in the Cookbook site.
         -->
     </head>
     <body>
         <div id="navbar">
             <a href="#">HOME</a>
             <a href="#">ABOUT</a>
-            <a href="#">CONTACT</a>
+            <a href="#" class="warning">CONTACT</a>
         </div>
         <p>
             Lorem ipsum dolor sit amet, consectetur 
