--- a/cookbook/meal-prep/combining-selectors/page7.html
+++ b/cookbook/meal-prep/combining-selectors/page7.html
@@ -10,7 +10,7 @@
         <div id="navbar">
             <a href="#">HOME</a>
             <a href="#">ABOUT</a>
-            <a href="#">CONTACT</a>
+            <a href="#" class="warning">CONTACT</a>
         </div>
         <p>
             Lorem ipsum dolor sit amet, consectetur 
