--- a/cookbook/meal-prep/absolute-vs-relative-units/page0.html
+++ b/cookbook/meal-prep/absolute-vs-relative-units/page0.html
@@ -8,7 +8,7 @@
             Connect the style.css file below; again, ignore
             the different file name and the 'data-meal-prep'
             attribute; it's just to configure the demo in
-            the Meal Prep site.
+            the Cookbook site.
         -->
         <link href="css/page0.css" rel="stylesheet" data-meal-prep>
     </head>
