--- a/cookbook/appetizers/utilizing-google-fonts.html
+++ b/cookbook/appetizers/utilizing-google-fonts.html
@@ -163,7 +163,7 @@
                             </p>
                             <p>
                                 For instance, clicking on "Handwriting" under 
-                                "Decorative Stroke" will apply a filter to 
+                                "Classification" will apply a filter to 
                                 the search results only showing fonts tagged as 
                                 handwriting fonts.
                             </p>
