--- a/cookbook/appetizers/identifying-boxes.html
+++ b/cookbook/appetizers/identifying-boxes.html
@@ -526,9 +526,10 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                To begin, start by 
-                                defining the styles for the whole 
-                                license container.  
+                                To begin, start by defining the styles 
+                                for the whole license container. (A width
+                                of 700px with a rounded border is a good 
+                                starting point!)
                             </p>
                             <p>
                                 Then set up the containers for the inner 
