metube demo updates

--- a/cookbook/meal-prep/two-column-mixed-layouts/page6.html
+++ b/cookbook/meal-prep/two-column-mixed-layouts/page6.html
@@ -63,10 +63,10 @@
 
                 <!--
                     After creating the metube-item, we're going 
-                    to duplicate it 5 more times; remind students
+                    to duplicate it 5 more times; remember
                     that copy/pasting is dangerous if you're not
-                    careful, so tell them to be careful to make sure
-                    their indentation is correct and that they have 
+                    careful, so be careful to make sure
+                    your indentation is correct and that you have 
                     matching opening/closing tags before copying.
                 -->
                 <div class="metube-item">
