side by side content demoes

--- a/cookbook/recipes/media-and-text/page0.html
+++ b/cookbook/recipes/media-and-text/page0.html
@@ -10,6 +10,21 @@
         <div id="main-section">
             
             <div class="single-column">
+
+                <!--
+                    Note the structure of our "side-by-side"
+                    container; inside, there are two containers:
+                    one for an image, and one for text.
+
+                    This is how you can set up a "Media & Text"
+                    layout.
+
+                    Sound familiar? You used a Block of the
+                    exact same name in WordPress!
+
+                    Now you can build your own, and customize
+                    it however you want!
+                -->
                 <div class="side-by-side">
                     <div class="image-container">
                         <img src="images/cool-boxes.webp" alt="cereal box">
@@ -30,6 +45,7 @@
                         <img src="images/warm-boxes.webp" alt="cereal box">
                     </div>
                 </div>
+
             </div>
         </div>
     </body>
