exercise project swaps

--- a/cookbook/meal-prep/mebay-product-page/page0.html
+++ b/cookbook/meal-prep/mebay-product-page/page0.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>mebay Product Page (Exercise)</title>
+        <title>mebay Product Page (Project)</title>
         <link href="css/page0.css" rel="stylesheet" data-meal-prep>
     </head>
     <body>
