--- a/cookbook/meal-prep/grrm/page0.html
+++ b/cookbook/meal-prep/grrm/page0.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Modernizing George R.R. Martin (Project)</title>
+        <title>Modernizing George R.R. Martin (Exercise)</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
