responsive adoption site

--- a/cookbook/examples/adopt-me-plz/adopt.html
+++ b/cookbook/examples/adopt-me-plz/adopt.html
@@ -17,16 +17,18 @@
     <body>
         <div id="navbar">
             <a id="logo" href="index.html">AdoptMePlz <i class="fa-solid fa-paw"></i></a>
-            <div class="dropdown-container">
-                <a href="adopt.html">Adopt <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-menu">
-                    <a href="goldie.html">Goldie</a>
-                    <a href="max.html">Max</a>
-                    <a href="cici.html">Cici</a>
+            <div id="links">
+                <div class="dropdown-container">
+                    <a href="adopt.html">Adopt <i class="fa-solid fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="goldie.html">Goldie</a>
+                        <a href="max.html">Max</a>
+                        <a href="cici.html">Cici</a>
+                    </div>
                 </div>
+                <a href="volunteer.html">Volunteer</a>
+                <a href="donate.html">Donate</a>
             </div>
-            <a href="volunteer.html">Volunteer</a>
-            <a href="donate.html">Donate</a>
         </div>
         <div id="layout">
             <h2>
