updating the wordpress setup tutorial

--- a/cookbook/appetizers/pantheon-wordpress-setup.html
+++ b/cookbook/appetizers/pantheon-wordpress-setup.html
@@ -99,7 +99,7 @@
                                 you first need to find someone/something to host it 
                                 for you.
                             </p>
-                            <p>
+                            <!-- <p>
                                 For most of the course, GitHub Pages has been 
                                 our hosting provider, creating a web site for us
                                 from all the HTML and CSS we've written.
@@ -108,9 +108,11 @@
                                 However, GitHub Pages cannot host something as 
                                 dynamic and complex as a CMS, so we need to use 
                                 an altenate hosting provider.
-                            </p>
+                            </p> -->
+                            
                             <p>
-                                The hosting provider we're going to be using is 
+                                The hosting provider we're going to be using
+                                for this first week of CMS is 
                                 called <b>Pantheon</b>.
                             </p>
                             <p>
@@ -176,7 +178,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/02_pantheon_signup_2ndattempt.png" 
+                                src="images/pantheon-wordpress-setup/02_pantheon_signup_v2.png" 
                                 alt="Fill out the required data fields to create your account, or use Google to sign up"
                             >
                             <figcaption>
@@ -247,12 +249,12 @@
                                 Now that you have your Pantheon account setup, 
                                 we can create a Pantheon site.
                             </p>
-                            <p>
+                            <!-- <p>
                                 This is similar to how we setup GitHub Pages,
                                 but whereas GitHub only lets us have one
                                 website, Pantheon allows us to set up two 
                                 websites for free.
-                            </p>
+                            </p> -->
                             <p>
                                 Creating a Pantheon site is kind of like 
                                 securing the land to build a house; once we 
@@ -333,7 +335,7 @@
                                 assignment and name the site as required.
                             </p>
                             <p class="indent">
-                                Typically this will follow the format of<br> 
+                                For our course, this will follow the format of<br> 
                                 <i>firstname-lastname-[sitetype]</i><br>
                             </p>
                             <p>
@@ -667,13 +669,14 @@
                                 This is actually your WordPress site, but
                                 at the moment, there's still a lot of placeholder
                                 content, such as "Mindblown: a blog about 
-                                philosophy".
+                                philosophy" in the screenshot to the right; 
+                                this content is set using the default
+                                WordPress Theme, which changes every year.
                             </p>
                             <p class="indent">
-                                Don't worry, we're not going to be writing 
-                                anything related to philosophy in this class 
-                                (unless you choose to!).
-                                We'll change the placeholder content later.
+                                Don't worry, as you'll see soon, we can
+                                customize all of this! For now, just ignore 
+                                the default Theme content.
                             </p>
                             <p>
                                 Notice how the home icon in the top left 
