--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -1,172 +1,63 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <title>AGENDA</title>
-    <meta name="description" content="This is an amazing site; come visit!">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
-      body {
-        font-family: Verdana, sans-serif;
-      }
-      ul {
-        font-size: 24px;
-      }
-      #agenda {
-        padding-left: 36px;
-        margin-bottom: 36px;
-      }
-      .indent {
-        padding-left: 36px;
-      }
-      .highlight {
-        background-color: orange;
-      }
-      .warning {
-        background-color: red;
-      }
-      .green {
-        background: linear-gradient(to right, green, lightgreen, green);
-        padding: 12px;
-        text-shadow: 1px 1px 4px white;
-      }
-      h2 {
-        margin-top: 24px
-      }
-      .agendaItem {
-        font-size: 18px;
-        display: flex;
-      }
-      .agendaItem span:first-child {
+    <head>
+        <title>GDWD 105 AGENDA - 2025 Cohort</title>
+        <meta name="description" content="This is an amazing site; come visit!">
+        <link href="css/agenda.css" rel="stylesheet">
+    </head>
+    <body>
+        
+        <div id="layout">
+            <h1>GDWD 105 - Agenda for January 5th, 2024</h1>
+            <div id="flex-container">
+                <div id="agenda">
+                    <div class="wrapper">
+                        <h3>Announcements (9am-9:10am)</h3>
+                        <ul>
+                            <li>Introductions</li>
+                        </ul>
+                    </div>
+                    <div class="wrapper">
+                        <h3>Period 1 (9:10am-10:20am)</h3>
+                        <ul>
+                            <li><span class="type">Resource</span> Course Overview and Policies</li>
+                            <li><span class="type">PowerPoint</span> Intro to CMS</li>
+                        </ul>
+                    </div>
+                    <h3>Small Break (10min)</h3>
+                    <div class="wrapper">
+                        <h3>Period 2 (10:30am-12pm)</h3>
+                        <ul>
+                            <li><span class="type">Exercise</span> WordPress Sandbox Site Creation</li>
+                            <li><span class="type">Demo</span> Intro to WordPress</li>
+                        </ul>
+                    </div>
+                    <h3>Lunch Break (45min)</h3>
+                    <div class="wrapper">
+                        <h3>Period 3 (12:45pm-2pm)</h3>
+                        <ul>
+                            <li><span class="type">Demo</span> Intro to WordPress [cont.]</li>
+                            <li><span class="type">Exercise</span> My First Blog Post</li>
+                        </ul>
+                    </div>
+                </div>
 
-        width: 200px;
-      }
-      .agendaItem span:not(:first-child) {
-        flex: 1;
-      }
-      .assnItem {
-        display: flex;
-        max-width: 900px;
-      }
-      .assnItem span:first-child {
-        flex: 1;
-      }
-      .assnItem span:not(:first-child) {
-        width: 200px;
-      }
-      .done {
-        text-decoration: line-through;
-      }
-      .minimum {
-        font-family: 'Kanit', sans-serif;
-        font-weight: bold;
-        font-size: 32px;
-      }
-      .fire {
-        animation: fire 0.5s infinite ease-in-out;
-        background-image: linear-gradient(45deg, red, yellow, red);
-        background-size: 400% 400%;
-        display: inline-block;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-      @keyframes fire {
-        0% {
-            background-position: 0%;
-        }
-        100% {
-            background-position: 100%;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <h1>GDWD 105 Agenda for 5/22 (THE FINAL DAY)</h1>
-    <div id="agenda">
-      <h2>Announcements (9:10)</h2>
-      <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-11am): FINAL EXAM</h2>
-      <h2>Period 2 (11am-12pm): End Course Surveys | Challenge Exercise</h2>
-      <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Portfolio Lab Time (Resubmissions due by 2pm)</h2>
-    </div>
-
-    <!-- <h1>Coming Soon</h1> -->
-    <div id="agenda">
-      <h2 class="assnItem warning">
-        <span>FINAL EXAM</span>
-        <span>TODAY!!!</span>
-      </h2> 
-      <!-- <h2 class="assnItem highlight">
-        <span>FINAL EVAL</span>
-        <span>Today at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>109 End Course Survey</span>
-        <span>Today at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Graduation Survey</span>
-        <span>Today at 2pm</span>
-      </h2>
-      <h2 class="assnItem highlight">
-        <span>Graduation Information Update Survey [MOST IMPORTANT]</span>
-        <span>Today at 2pm</span>
-      </h2> -->
-    </div>
-
-    <h1>Late Policy</h1>
-    <div id="agenda">
-      <h2>
-        Late Exercises: 10% penalty
-        <br>
-        Late Projects: 21% penalty
-      </h2>
-      <h2>
-        Last Day to Turn In Resubmissions:
-        <br>Friday of the week it was graded
-      </h2>
-      <h3>(Anything turned in past this won't be graded/re-graded)</h3>
-      <!-- <h2>
-        Last Day to Resubmit Projects:
-        <br>Day 5 of the following week the Project was assigned in
-      </h2>
-      <h3>(Anything turned in past this won't be graded)</h3> -->
-    </div>
-
-    <!--<h1>Coming Soon</h1>
-    <div id="agenda">
-       <div class="agendaItem done">
-        <span>11/17 (Day 11)</span>
-        <span>Lab Day (Photoshop/InDesign) | AfterEffects Planning</span>
-      </div>
-      <br><br>
-      <div class="agendaItem done">
-        <span>11/21 (Day 12)</span>
-        <span>Lab Day (Photoshop/InDesign Wrap-up) | AfterEffects Critiques Part 1 | Final Exam Review #1</span>
-      </div>
-      <div class="agendaItem done">
-        <span>11/22 (Day 13)</span>
-        <span>Lab Day (After Effects) | AfterEffects Critiques Part 2 | Final Exam Review #2</span>
-      </div>
-      <div class="agendaItem done">
-        <span>11/23 (Day 14)</span>
-        <span>Lab Day (After Effects Wrap-up) | Final Exam Review #3</span>
-      </div>
-      <div class="agendaItem done">
-        <span>11/24 (Thanksgiving)</span>
-        <span>NO CLASS</span>
-      </div>
-      <br><br> 
-      <div class="agendaItem">
-        <span>11/28 (Day 15)</span>
-        <span>Final Exam / Final Eval</span>
-      </div>
-      <br><br>
-      <div class="agendaItem">
-        <span>01/27</span>
-        <span>Graduation</span>
-      </div>-->
-    </div>
-
-  </body>
+                <div id="assignments">
+                    <h2>Warm-up Question</h2>
+                    <ul>
+                        <li>How do you feel about the idea of coding?</li>
+                    </ul>
+                    <img 
+                        src="images/anxious.webp"
+                        alt="things that make me anxious"
+                    >
+                    <h2>Deliverables for Today</h2>
+                    <ul>
+                        <li><span class="type">Exercise</span> WordPress Sandbox Site Creation</li>
+                        <li><span class="type">Exercise</span> My First Blog Post</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
