--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 105 AGENDA - 2025 Cohort</title>
-        <meta name="description" content="This is an amazing site; come visit!">
+        <title>GDWD 105 AGENDA (2025 Cohort)</title>
+        <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 5th, 2024</h1>
+            <h1>GDWD 105 - Agenda for January 8th, 2024</h1>
             <div id="flex-container">
                 <div id="agenda">
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
-                        <ul>
-                            <li>Introductions</li>
-                        </ul>
-                    </div>
-                    <div class="wrapper">
+
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Resource</span> Course Overview and Policies</li>
-                            <li><span class="type">PowerPoint</span> Intro to CMS</li>
+                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
                         </ul>
                     </div>
                     <h3>Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span> WordPress Sandbox Site Creation</li>
-                            <li><span class="type">Demo</span> Intro to WordPress</li>
+                            <li><span class="type">Demo</span>Customizing WordPress</li>
                         </ul>
                     </div>
                     <h3>Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span> Intro to WordPress [cont.]</li>
-                            <li><span class="type">Exercise</span> My First Blog Post</li>
+                            <li><span class="type">Exercise</span>Customizing WordPress</li>
                         </ul>
                     </div>
                 </div>
@@ -45,16 +38,17 @@
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>How do you feel about the idea of coding?</li>
+                        <li>Are you an early bird, or a night owl?</li>
                     </ul>
-                    <img 
-                        src="images/anxious.webp"
-                        alt="things that make me anxious"
-                    >
+                    <div class="img-container">
+                        <img 
+                            src="images/night-owl.webp"
+                            alt="night owl"
+                        >
+                    </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span> WordPress Sandbox Site Creation</li>
-                        <li><span class="type">Exercise</span> My First Blog Post</li>
+                        <li><span class="type">Exercise</span>Customizing WordPress</li>
                     </ul>
                 </div>
             </div>
