--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -16,21 +16,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
+                            <li><span class="type">Demo</span>Columns and Layouts, Anchors and Links</li>
                         </ul>
                     </div>
                     <h3>Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Customizing WordPress</li>
+                            <li><span class="type">Exercise</span>Wiki with Sidebar</li>
                         </ul>
                     </div>
                     <h3>Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Customizing WordPress</li>
+                            <li><span class="type">Exercise</span>Wiki with Sidebar (cont.)</li>
                         </ul>
                     </div>
                 </div>
@@ -38,17 +38,17 @@
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Are you an early bird, or a night owl?</li>
+                        <li>How do you feel about WordPress so far?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/night-owl.webp"
-                            alt="night owl"
+                            src="images/overthinking.webp"
+                            alt="overthinking"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Customizing WordPress</li>
+                        <li><span class="type">Exercise</span>Wiki with Sidebar (WordPress)</li>
                     </ul>
                 </div>
             </div>
