--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,7 +8,7 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 10th, 2024</h1>
+            <h1>GDWD 105 - Agenda for January 11th, 2024</h1>
             <div id="flex-container">
                 <div id="agenda">
                     <div class="wrapper">
@@ -16,23 +16,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>WordPress Retail Site Creation</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site</li>
                         </ul>
                     </div>
                     <h3>Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Homepage Settings</li>
-                            <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site [cont.]</li>
                         </ul>
                     </div>
                     <h3>Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page) (cont.)</li>
-                            <li><span class="type">Exercise</span>Backing up your WordPress Site</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site [cont.]</li>
                         </ul>
                     </div>
                 </div>
@@ -40,19 +38,17 @@
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Coffee? Tea? Or other?</li>
+                        <li>If you had to choose, would you pick extreme cold? or extreme heat?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/tea-rex.jpg"
+                            src="images/procrastination.webp"
                             alt="tea-rex"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>WordPress Retail Site Creation</li>
-                        <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
-                        <li><span class="type">Exercise</span>Backing up your WordPress Site</li>
+                        <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
                     </ul>
                 </div>
             </div>
