--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,7 +8,7 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 11th, 2024</h1>
+            <h1>GDWD 105 - Agenda for January 12th, 2024</h1>
             <div id="flex-container">
                 <div id="agenda">
                     <div class="wrapper">
@@ -16,21 +16,24 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site</li>
+                            <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
+                            <li><span class="type">PowerPoint</span>General Web Development</li>
                         </ul>
                     </div>
-                    <h3>Small Break (10min)</h3>
+                    <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Intro to HTML</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                         </ul>
                     </div>
-                    <h3>Lunch Break (45min)</h3>
+                    <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site [cont.]</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Intro to GitHub</li>
                         </ul>
                     </div>
                 </div>
@@ -38,17 +41,17 @@
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>If you had to choose, would you pick extreme cold? or extreme heat?</li>
+                        <li>What is your go-to comfort food?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/procrastination.webp"
+                            src="images/feelingsnacky.jpg"
                             alt="tea-rex"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                        <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                     </ul>
                 </div>
             </div>
