--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -23,6 +23,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
+                        <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
                         <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                     </ul>
                 </div>
