additional VS Code setup steps

--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -296,6 +296,62 @@
                         </div>
                     </div>
                 </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Next, we're going to configure a few Settings 
+                                to help you write cleaner code and prevent
+                                some common bugs down the line.
+                            </p>
+                            <p>
+                                Go to the Settings tab. (It's in slightly 
+                                different places in Mac vs PC.)
+                            </p>
+                            <p class="indent">
+                                For Mac users, it's under Code -> Preferences ->
+                                Settings.
+                            </p>
+                            <p class="indent">
+                                For PC users, it's under File -> Preferences ->
+                                Settings.
+                            </p>
+                            <p>
+                                Once you're in the Settings tab, search for 
+                                "auto closing tags".
+                            </p>
+                            <p>
+                                In the setting for "HTML: Auto Closing Tags",
+                                uncheck the box beneath it.
+                            </p>
+                            <p>
+                                That's one setting down.  
+                            </p>
+                            <br><br>
+                            <p>
+                                Next, jump over to
+                                another small tutorial that's a bit more 
+                                complex, so it has its own page.
+                                <br><br>
+                                <a href="adding-a-code-ruler.html" target="_blank">
+                                    Adding a Code Ruler
+                                </a>
+                                <br><br>
+                                Return here once you have that set up.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/autoclosingtags.png" 
+                                alt="Screenshot of what Visual Studio Code looks like when opened"
+                            >
+                            <figcaption>
+                                Screenshot of what Visual Studio Code looks 
+                                like when opened
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
             </ol>
             <h4>
                 Congrats! You are now set up to start coding 
