--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -343,11 +343,11 @@
                         <div class="imageContainer">
                             <img 
                                 src="images/web-dev-startup/autoclosingtags.png" 
-                                alt="Screenshot of what Visual Studio Code looks like when opened"
+                                alt="Screenshot of the Settings tab, when turning off the 'HTML: Auto Closing Tags' setting"
                             >
                             <figcaption>
-                                Screenshot of what Visual Studio Code looks 
-                                like when opened
+                                Screenshot of the Settings tab, when turning off
+                                the "HTML: Auto Closing Tags" setting
                             </figcaption>
                         </div>
                     </div>
