--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,23 +8,23 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 12th, 2024</h1>
+            <h1>GDWD 105 - Agenda for January 16th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your go-to comfort food?</li>
+                        <li>What is your favorite restaurant?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/feelingsnacky.jpg"
-                            alt="tea-rex"
+                            src="images/pho-fox.webp"
+                            alt="pho-fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
-                        <li><span class="type">Exercise</span>Code Skeleton Setup</li>
+                        <li><span class="type">Exercise</span>Hello World</li>
+                        <li><span class="type">Exercise</span>Basic HTML Drills</li>
                     </ul>
                 </div>
 
@@ -34,24 +34,23 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
-                            <li><span class="type">PowerPoint</span>General Web Development</li>
+                            <li><span class="type">PowerPoint</span>HTML Tags and Elements</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Intro to HTML</li>
-                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
+                            <li><span class="type">Demo</span>HTML Text Styling Elements</li>
+                            <li><span class="type">PowerPoint</span>Clean Code (Part 1)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Code Skeleton Setup [cont.]</li>
-                            <li><span class="type">PowerPoint</span>Intro to GitHub</li>
+                            <li><span class="type">Exercise</span>Hello World</li>
+                            <li><span class="type">Exercise</span>Basic HTML Drills</li>
                         </ul>
                     </div>
                 </div>
