--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 17th, 2024</h1>
+            <h1>GDWD 105 - Agenda for January 18th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite snack food/dessert?</li>
+                        <li>What is your favorite genre of book to read?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/snacks.webp"
+                            src="images/books_happy_place.jpg"
                             alt="dessert first"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Wiki Page 1</li>
+                        <li><span class="type">Exercise</span>Wiki Page 2</li>
                     </ul>
                 </div>
 
@@ -33,25 +33,23 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Tags and Elements Review</li>
-                            <li><span class="type">Demo</span>HTML Lists | Parent/Child Relationships</li>
-                            <li><span class="type">Kahoot</span>HTML Indentation Review I</li>
+                            <li><span class="type">Kahoot</span>HTML Attributes Review</li>
+                            <li><span class="type">Demo</span>HTML Anchors (Links)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>HTML Attributes</li>
-                            <li><span class="type">Demo</span>HTML Images</li>
-                            <li><span class="type">PowerPoint</span>Clean Code - Part 2</li>
+                            <li><span class="type">Demo</span>HTML Anchors (Links) [cont.]</li>
+                            <li><span class="type">Kahoot</span>HTML Indentation Review II</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Wiki Page 1</li>
+                            <li><span class="type">Exercise</span>Wiki Page 2</li>
                         </ul>
                     </div>
                 </div>
