--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -24,7 +24,7 @@
                     <h2>Deliverables for Today</h2>
                     <ul>
                         <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
-                        <li><span class="type">Exercise</span>Color Palettes</li>
+                        <li><span class="type">Exercise</span>Document Flow Drills</li>
                     </ul>
                 </div>
 
